<resources>
    <string name="app_name">SabCalorieTracker</string>
    <string name="error_unknown">Unknown error</string>
    <string name="welcome_text">Hello! Let\'s find out more about you :)</string>
    <string name="lets_go">Let\'s go</string>
    <string name="whats_your_gender">What is your gender?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="whats_your_age">What\'s your age?</string>
    <string name="next">Next</string>
    <string name="whats_your_height">What\'s your height?</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="error_age_cant_be_empty">The age can\'t be empty</string>
    <string name="error_height_cant_be_empty">The height can\'t be empty</string>
    <string name="error_weight_cant_be_empty">The weight can\'t be empty</string>
    <string name="kcal">kcal</string>
    <string name="carbs">Carbs</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="previous_day">Previous day</string>
    <string name="next_day">Next day</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="nutrient_info">%dg • %dkcal</string>
    <string name="amount_info">%dg</string>
    <string name="grams">g</string>
    <string name="extend">Extend</string>
    <string name="collapse">Collapse</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="add_meal">Add %s</string>
    <string name="add">Add</string>
    <string name="search">Search...</string>
    <string name="today">Today</string>
    <string name="recent">Recent</string>
    <string name="kcal_per_100g">%dkcal / 100g</string>
    <string name="track">Track</string>
    <string name="error_something_went_wrong">Oops, something went wrong!</string>
    <string name="no_results">No results</string>
    <string name="error_invalid_values">These are not valid values</string>
    <string name="what_are_your_nutrient_goals">What are your nutrient goals?</string>
    <string name="percent_proteins">% proteins</string>
    <string name="percent_fats">% fats</string>
    <string name="percent_carbs">% carbs</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="years">years</string>
    <string name="whats_your_weight">What\'s your weight?</string>
    <string name="low">Low</string>
    <string name="gain">Gain</string>
    <string name="keep">Keep</string>
    <string name="lose">Lose</string>
    <string name="lose_keep_or_gain_weight">Do you want to lose, keep or gain weight?</string>
    <string name="whats_your_activity_level">What\'s your activity level?</string>
    <string name="error_not_100_percent">The values must add up to 100%</string>
    <string name="your_goal">Your goal:</string>
    <string name="delete">Delete</string>
</resources>