package com.sabcode.sabcalorietracker

import androidx.compose.foundation.layout.fillMaxSize
import androidx.compose.material.Scaffold
import androidx.compose.material.rememberScaffoldState
import androidx.compose.ui.ExperimentalComposeUiApi
import androidx.compose.ui.Modifier
import androidx.compose.ui.test.assertIsDisplayed
import androidx.compose.ui.test.junit4.createAndroidComposeRule
import androidx.compose.ui.test.onAllNodesWithText
import androidx.compose.ui.test.onFirst
import androidx.compose.ui.test.onNodeWithContentDescription
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performTextInput
import androidx.navigation.NavHostController
import androidx.navigation.NavType
import androidx.navigation.compose.rememberNavController
import androidx.navigation.navArgument
import com.sabcode.core.domain.model.ActivityLevel
import com.sabcode.core.domain.model.Gender
import com.sabcode.core.domain.model.GoalType
import com.sabcode.core.domain.model.UserInfo
import com.sabcode.core.domain.preferences.Preferences
import com.sabcode.core.domain.usecase.FilterOutDigits
import com.sabcode.sabcalorietracker.navigation.Route
import com.sabcode.sabcalorietracker.repository.TrackerRepositoryFake
import com.sabcode.sabcalorietracker.ui.theme.SabCalorieTrackerTheme
import com.sabcode.tracker_domain.usecase.CalculateMealNutrientsUseCase
import com.sabcode.tracker_domain.usecase.DeleteTrackedFoodUseCase
import com.sabcode.tracker_domain.usecase.GetFoodsForDateUseCase
import com.sabcode.tracker_domain.usecase.SearchFoodUseCase
import com.sabcode.tracker_domain.usecase.TrackFoodUseCase
import com.sabcode.tracker_domain.usecase.TrackerUseCases
import com.sabcode.tracker_presentation.search.SearchScreen
import com.sabcode.tracker_presentation.search.SearchViewModel
import com.sabcode.tracker_presentation.tracker_overview.TrackerOverviewScreen
import com.sabcode.tracker_presentation.tracker_overview.TrackerOverviewViewModel
import dagger.hilt.android.testing.HiltAndroidRule
import dagger.hilt.android.testing.HiltAndroidTest
import io.mockk.every
import io.mockk.mockk
import org.junit.Before
import org.junit.Rule
import androidx.navigation.compose.NavHost
import androidx.navigation.compose.composable
import com.google.common.truth.Truth.assertThat
import com.sabcode.tracker_domain.model.TrackableFood
import io.mockk.InternalPlatformDsl.toStr
import org.junit.Test
import kotlin.math.roundToInt


@HiltAndroidTest

class TrackerOverviewE2E {


    @get:Rule
    val hiltRule = HiltAndroidRule(this)

    @get:Rule
    val composeRule = createAndroidComposeRule<MainActivity>()

    private lateinit var repositoryFake: TrackerRepositoryFake
    private lateinit var trackerUseCases: TrackerUseCases
    private lateinit var preferences: Preferences
    private lateinit var trackerOverviewViewModel: TrackerOverviewViewModel
    private lateinit var searchViewModel: SearchViewModel

    private lateinit var navController: NavHostController

    @OptIn(ExperimentalComposeUiApi::class)
    @Before
    fun setUp() {
        preferences = mockk(relaxed = true)
        every {
            preferences.loadUserInfo()
        } returns UserInfo(
            gender = Gender.Male,
            age = 20,
            weight = 80f,
            height = 180,
            activityLevel = ActivityLevel.Medium,
            goalType = GoalType.KeepWeight,
            carbRatio = 0.4f,
            proteinRatio = 0.3f,
            fatRatio = 0.3f
        )

        repositoryFake = TrackerRepositoryFake()
        trackerUseCases = TrackerUseCases(
            trackFoodUseCase = TrackFoodUseCase(repositoryFake),
            searchFoodUseCase = SearchFoodUseCase(repositoryFake),
            getFoodsForDateUseCase = GetFoodsForDateUseCase(repositoryFake),
            deleteTrackedFoodUseCase = DeleteTrackedFoodUseCase(repositoryFake),
            calculateMealNutrientsUseCase = CalculateMealNutrientsUseCase(preferences)
        )

        trackerOverviewViewModel = TrackerOverviewViewModel(
            preferences = preferences,
            trackerUseCases = trackerUseCases
        )

        searchViewModel = SearchViewModel(
            trackerUseCases = trackerUseCases,
            filterOutDigits = FilterOutDigits()
        )

        composeRule.setContent {
            SabCalorieTrackerTheme {
                val scaffoldState = rememberScaffoldState()
                navController = rememberNavController()
                Scaffold(
                    modifier = Modifier.fillMaxSize(),
                    scaffoldState = scaffoldState
                ) { innerPadding ->
                    NavHost(
                        navController = navController,
                        startDestination = Route.TRACKER_OVERVIEW
                    ) {
                        composable(Route.TRACKER_OVERVIEW) {
                            TrackerOverviewScreen(
                                onNavigateToSearch = { mealName, day, month, year ->
                                    navController.navigate(
                                        Route.SEARCH + "/$mealName" +
                                                "/$day" +
                                                "/$month" +
                                                "/$year"
                                    )
                                },
                                viewModel = trackerOverviewViewModel
                            )
                        }
                        composable(
                            route = Route.SEARCH + "/{mealName}/{dayOfMonth}/{month}/{year}",
                            arguments = listOf(
                                navArgument("mealName") {
                                    type = NavType.StringType
                                },
                                navArgument("dayOfMonth") {
                                    type = NavType.IntType
                                },
                                navArgument("month") {
                                    type = NavType.IntType
                                },
                                navArgument("year") {
                                    type = NavType.IntType
                                },
                            )
                        ) {

                            val mealName = it.arguments?.getString("mealName")!!
                            val dayOfMonth = it.arguments?.getInt("dayOfMonth")!!
                            val month = it.arguments?.getInt("month")!!
                            val year = it.arguments?.getInt("year")!!

                            SearchScreen(
                                scaffoldState = scaffoldState,
                                mealName = mealName,
                                dayOfMonth = dayOfMonth,
                                month = month,
                                year = year,
                                onNavigateUp = {
                                    navController.navigateUp()
                                },
                                viewModel = searchViewModel
                            )

                        }
                    }
                }
            }
        }
    }


    @Test
    fun addBreakfast_appearsUnderBreakfast_nutrientsProperlyCalculated() {
        repositoryFake.searchResult = listOf(
            TrackableFood(
                name = "banana",
                imageUrl = null,
                caloriesPer100g = 150,
                carbsPer100g = 50,
                proteinPer100g = 5,
                fatPer100g = 1
            )
        )

        val addedAmount = 150
        val expectedCalories = (1.5f * 150).roundToInt()
        val expectedCarbs = (1.5f * 50).roundToInt()
        val expectedProtein = (1.5f * 5).roundToInt()
        val expectedFat = (1.5f * 1).roundToInt()

        composeRule.onNodeWithText("Add Breakfast")
            .performClick()
            .assertDoesNotExist()

        composeRule.onNodeWithContentDescription("Breakfast")
            .performClick()

        composeRule.onNodeWithText("Add Breakfast")
            .assertIsDisplayed()

        composeRule.onNodeWithText("Add Breakfast")
            .performClick()

        assertThat(
            navController
                .currentDestination
                ?.route
                ?.startsWith(Route.SEARCH)
        ).isTrue()

        composeRule.onNodeWithText("search_textfield")
            .performTextInput("banana")

        composeRule.onNodeWithContentDescription("Search...")
            .performClick()


        composeRule.onNodeWithText("Carbs")
            .performClick()

        composeRule.onNodeWithContentDescription("Amount")
            .performTextInput(addedAmount.toStr())

        composeRule
            .onNodeWithContentDescription("Track")
            .performClick()

        assertThat(
            navController
                .currentDestination
                ?.route
                ?.startsWith(Route.TRACKER_OVERVIEW)
        ).isTrue()

        composeRule
            .onAllNodesWithText(expectedCarbs.toStr())
            .onFirst()
            .assertIsDisplayed()

        composeRule
            .onAllNodesWithText(expectedProtein.toStr())
            .onFirst()
            .assertIsDisplayed()

        composeRule
            .onAllNodesWithText(expectedFat.toStr())
            .onFirst()
            .assertIsDisplayed()

        composeRule
            .onAllNodesWithText(expectedCalories.toStr())
            .onFirst()
            .assertIsDisplayed()


    }
}